made notebook ready for rune

--- a/training_data_maker.ipynb
+++ b/training_data_maker.ipynb
@@ -209,9 +209,9 @@
     "\n",
     "    return\n",
     "\n",
-    "make_subset(n = 3600, \n",
-    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json',\n",
-    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_cleaned_training_data.json')\n"
+    "#make_subset(n = 3600, \n",
+    "#            base_data_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data.json',\n",
+    "#            subset_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_cleaned_training_data.json')\n"
    ]
   },
   {
@@ -264,14 +264,14 @@
     "\n",
     "\n",
     "change_blame_by_template(\n",
-    "    base_file_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data.json', \n",
-    "    mod_temp_path = '/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_four_templates.json', \n",
-    "    output_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_4_5_temps.json' )\n"
+    "    base_file_path ='/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data.json', \n",
+    "    mod_temp_path = '/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/sentences_in_four_templates.json', \n",
+    "    output_path ='/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_4_5_temps.json' )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "83af4147",
    "metadata": {},
    "outputs": [],
@@ -281,8 +281,8 @@
     "random.seed(52)\n",
     "\n",
     "make_subset(n = 1800, \n",
-    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_4_5_temps.json',\n",
-    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_4_5_cleaned_training_data.json')"
+    "            base_data_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_4_5_temps.json',\n",
+    "            subset_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_4_5_cleaned_training_data.json')"
    ]
   },
   {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "c6ba995f",
    "metadata": {},
    "outputs": [
@@ -311,14 +311,14 @@
    ],
    "source": [
     "change_blame_by_template(\n",
-    "    base_file_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_4_5_temps.json', \n",
-    "    mod_temp_path = '/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_three_templates.json', \n",
-    "    output_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json' )"
+    "    base_file_path ='/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_4_5_temps.json', \n",
+    "    mod_temp_path = '/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/sentences_in_three_templates.json', \n",
+    "    output_path ='/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_3_4_5_temps.json' )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d9a3af98",
    "metadata": {},
    "outputs": [],
@@ -326,8 +326,8 @@
     "#make subset of this\n",
     "random.seed(62)\n",
     "make_subset(n = 1800, \n",
-    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json',\n",
-    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_3_4_5_cleaned_training_data.json')"
+    "            base_data_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_3_4_5_temps.json',\n",
+    "            subset_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_3_4_5_cleaned_training_data.json')"
    ]
   },
   {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "22d1e238",
    "metadata": {},
    "outputs": [
@@ -356,16 +356,16 @@
    ],
    "source": [
     "change_blame_by_template(\n",
-    "    base_file_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_3_4_5_temps.json', \n",
-    "    mod_temp_path = '/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_two_templates.json', \n",
-    "    output_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_2_3_4_5_temps.json' )\n",
+    "    base_file_path ='/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_3_4_5_temps.json', \n",
+    "    mod_temp_path = '/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/sentences_in_two_templates.json', \n",
+    "    output_path ='/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_2_3_4_5_temps.json' )\n",
     "\n",
     "\n",
     "#make subset of this\n",
     "random.seed(72)\n",
     "make_subset(n = 1800, \n",
-    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_2_3_4_5_temps.json',\n",
-    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_2_3_4_5_cleaned_training_data.json')"
+    "            base_data_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_2_3_4_5_temps.json',\n",
+    "            subset_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_2_3_4_5_cleaned_training_data.json')"
    ]
   },
   {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "382c21c2",
    "metadata": {},
    "outputs": [
@@ -394,16 +394,16 @@
    ],
    "source": [
     "change_blame_by_template(\n",
-    "    base_file_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_2_3_4_5_temps.json', \n",
-    "    mod_temp_path = '/work/MarkusLundsfrydJensen#1865/Bachelor_project/json_files/sentences_in_one_templates.json', \n",
-    "    output_path ='/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_1_2_3_4_5_temps.json' )\n",
+    "    base_file_path ='/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_2_3_4_5_temps.json', \n",
+    "    mod_temp_path = '/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/json_files/sentences_in_one_templates.json', \n",
+    "    output_path ='/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_1_2_3_4_5_temps.json' )\n",
     "\n",
     "\n",
     "#make subset of this\n",
     "random.seed(82)\n",
     "make_subset(n = 1800, \n",
-    "            base_data_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/cleaned_training_data_1_2_3_4_5_temps.json',\n",
-    "            subset_file_path = '/work/MarkusLundsfrydJensen#1865/Training_data/subset_1_2_3_4_5_cleaned_training_data.json')"
+    "            base_data_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/cleaned_training_data_1_2_3_4_5_temps.json',\n",
+    "            subset_file_path = '/work/RuneEgeskovTrust#9638/Bachelor/training_data/subset_1_2_3_4_5_cleaned_training_data.json')"
    ]
   },
   {
