--- a/training_data_maker.ipynb
+++ b/training_data_maker.ipynb
@@ -50,10 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "12a1768c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'all_training_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m entry \u001b[38;5;129;01min\u001b[39;00m blame_data:\n\u001b[32m      7\u001b[39m     entry[\u001b[33m\"\u001b[39m\u001b[33mlabel\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[32m1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     \u001b[43mall_training_data\u001b[49m.append(entry)\n",
+      "\u001b[31mNameError\u001b[39m: name 'all_training_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Open the blame data and make entry called label = 1\n",
     "\n",
@@ -179,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b7c51d68",
    "metadata": {},
    "outputs": [],
@@ -226,10 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cca9cc31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Updated 792 entries successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "def change_blame_by_template(base_file_path ='', mod_temp_path = '', output_path ='' ):\n",
     "    # Load data\n",
@@ -271,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "83af4147",
    "metadata": {},
    "outputs": [],
@@ -297,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c6ba995f",
    "metadata": {},
    "outputs": [
@@ -318,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d9a3af98",
    "metadata": {},
    "outputs": [],
@@ -342,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "22d1e238",
    "metadata": {},
    "outputs": [
@@ -380,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "382c21c2",
    "metadata": {},
    "outputs": [
@@ -419,7 +439,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "blame_bert",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -433,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
