--- a/training_pipeline_12345_temp.ipynb
+++ b/training_pipeline_12345_temp.ipynb
@@ -299,8 +299,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='76' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 76/114 52:24 < 26:54, 0.02 it/s, Epoch 1.99/3]\n",
+       "      <progress value='96' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 96/114 1:06:43 < 12:46, 0.02 it/s, Epoch 2.51/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -319,6 +319,13 @@
        "      <td>0.595228</td>\n",
        "      <td>0.721591</td>\n",
        "      <td>0.712677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2.620200</td>\n",
+       "      <td>0.474798</td>\n",
+       "      <td>0.789773</td>\n",
+       "      <td>0.781117</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -346,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "fadde19e",
    "metadata": {},
    "outputs": [
@@ -378,7 +385,12 @@
    ],
    "source": [
     "eval_results = trainer.evaluate()\n",
-    "print(eval_results)"
+    "print(eval_results)\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Evalresult12345templates.txt\", \"w\") as f:\n",
+    "    f.write(str(eval_results))\n",
+    "\n",
+    "# This is where we should very much remember to save the finetuned model locally as this contains the new weights for use in analyzing new text\n",
+    "lora_model.save_pretrained(f\"output/mmBERT/template_1_2_3_4_5_model\")"
    ]
   },
   {
@@ -393,17 +405,6 @@
     "If either om them split too far from eachother that indicates issues with the training process.\n",
     "The process itself should be pretty smooth with no dips either up or down.\n",
     "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c015a1ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is where we should very much remember to save the finetuned model locally as this contains the new weights for use in analyzing new text\n",
-    "lora_model.save_pretrained(f\"output/mmBERT/template_1_2_3_4_5_model\")"
    ]
   }
  ],
