--- a/training_pipeline_45_temp.ipynb
+++ b/training_pipeline_45_temp.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a36abd6d",
    "metadata": {},
    "outputs": [
@@ -299,8 +299,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='99' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 99/114 1:08:31 < 10:35, 0.02 it/s, Epoch 2.59/3]\n",
+       "      <progress value='114' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [114/114 1:20:00, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -327,6 +327,13 @@
        "      <td>0.795455</td>\n",
        "      <td>0.787525</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1.320300</td>\n",
+       "      <td>0.459788</td>\n",
+       "      <td>0.795455</td>\n",
+       "      <td>0.786523</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -336,6 +343,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=114, training_loss=5.090975139224739, metrics={'train_runtime': 4846.1853, 'train_samples_per_second': 2.229, 'train_steps_per_second': 0.024, 'total_flos': 5.916996698112e+16, 'train_loss': 5.090975139224739, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -353,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "id": "fadde19e",
    "metadata": {},
    "outputs": [
@@ -364,7 +381,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='22' max='22' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [22/22 00:29]\n",
+       "      [22/22 00:30]\n",
        "    </div>\n",
        "    "
       ],
@@ -379,13 +396,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.6536552906036377, 'eval_accuracy': 0.6136363636363636, 'eval_f1': 0.525079365079365, 'eval_runtime': 30.8398, 'eval_samples_per_second': 5.707, 'eval_steps_per_second': 0.713, 'epoch': 3.0}\n"
+      "{'eval_loss': 0.4597875475883484, 'eval_accuracy': 0.7954545454545454, 'eval_f1': 0.786522911051213, 'eval_runtime': 31.9386, 'eval_samples_per_second': 5.511, 'eval_steps_per_second': 0.689, 'epoch': 3.0}\n"
      ]
     }
    ],
    "source": [
     "eval_results = trainer.evaluate()\n",
-    "print(eval_results)"
+    "print(eval_results)\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Evalresult45templates.txt\", \"w\") as f:\n",
+    "    f.write(str(eval_results))\n",
+    "\n",
+    "# This is where we should very much remember to save the finetuned model locally as this contains the new weights for use in analyzing new text\n",
+    "lora_model.save_pretrained(f\"output/mmBERT/template_4_5_model\")"
    ]
   },
   {
@@ -400,17 +422,6 @@
     "If either om them split too far from eachother that indicates issues with the training process.\n",
     "The process itself should be pretty smooth with no dips either up or down.\n",
     "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c015a1ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is where we should very much remember to save the finetuned model locally as this contains the new weights for use in analyzing new text\n",
-    "lora_model.save_pretrained(f\"output/mmBERT/template_4_5_model\")"
    ]
   }
  ],
