--- a/training_pipeline_345_temp.ipynb
+++ b/training_pipeline_345_temp.ipynb
@@ -299,8 +299,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='87' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [ 87/114 1:00:25 < 19:11, 0.02 it/s, Epoch 2.27/3]\n",
+       "      <progress value='108' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [108/114 1:15:17 < 04:15, 0.02 it/s, Epoch 2.83/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "fadde19e",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,12 @@
    ],
    "source": [
     "eval_results = trainer.evaluate()\n",
-    "print(eval_results)"
+    "print(eval_results)\n",
+    "with open(\"/work/RuneEgeskovTrust#9638/Bachelor/Bachelor_project/Evalresult345templates.txt\", \"w\") as f:\n",
+    "    f.write(str(eval_results))\n",
+    "\n",
+    "# This is where we should very much remember to save the finetuned model locally as this contains the new weights for use in analyzing new text\n",
+    "lora_model.save_pretrained(f\"output/mmBERT/template_3_4_5_model\")"
    ]
   },
   {
@@ -400,17 +405,6 @@
     "If either om them split too far from eachother that indicates issues with the training process.\n",
     "The process itself should be pretty smooth with no dips either up or down.\n",
     "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c015a1ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# This is where we should very much remember to save the finetuned model locally as this contains the new weights for use in analyzing new text\n",
-    "lora_model.save_pretrained(f\"output/mmBERT/template_3_4_5_model\")"
    ]
   }
  ],
