--- a/training_pipeline_12345_temp.ipynb
+++ b/training_pipeline_12345_temp.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a36abd6d",
    "metadata": {},
    "outputs": [
@@ -299,8 +299,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='109' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [109/114 1:15:55 < 03:32, 0.02 it/s, Epoch 2.85/3]\n",
+       "      <progress value='114' max='114' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [114/114 1:20:22, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -327,6 +327,13 @@
        "      <td>0.789773</td>\n",
        "      <td>0.781117</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1.554200</td>\n",
+       "      <td>0.564394</td>\n",
+       "      <td>0.767045</td>\n",
+       "      <td>0.759587</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -336,6 +343,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=114, training_loss=5.8280256432399415, metrics={'train_runtime': 4867.891, 'train_samples_per_second': 2.219, 'train_steps_per_second': 0.023, 'total_flos': 5.916996698112e+16, 'train_loss': 5.8280256432399415, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -353,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fadde19e",
    "metadata": {},
    "outputs": [
@@ -364,7 +381,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='22' max='22' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [22/22 00:29]\n",
+       "      [22/22 00:31]\n",
        "    </div>\n",
        "    "
       ],
@@ -379,7 +396,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.6536552906036377, 'eval_accuracy': 0.6136363636363636, 'eval_f1': 0.525079365079365, 'eval_runtime': 30.8398, 'eval_samples_per_second': 5.707, 'eval_steps_per_second': 0.713, 'epoch': 3.0}\n"
+      "{'eval_loss': 0.5643936991691589, 'eval_accuracy': 0.7670454545454546, 'eval_f1': 0.7595868732300517, 'eval_runtime': 32.7464, 'eval_samples_per_second': 5.375, 'eval_steps_per_second': 0.672, 'epoch': 3.0}\n"
      ]
     }
    ],
